--- a/OnlineStore.Api/appsettings.json
+++ b/OnlineStore.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=StoreDBV2;User Id=sa;Password=sa123456;TrustServerCertificate=True;"
+    //"Default": "Server=localhost;Database=StoreDBV2;User Id=sa;Password=sa123456;TrustServerCertificate=True;"
+    "Default": "Server=localhost;Database=StoreDBV2;Integrated Security=True;TrustServerCertificate=True;"
   },
 
   "JWT": {
