--- a/OnlineStore.Api/OnlineStore.Api.csproj
+++ b/OnlineStore.Api/OnlineStore.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.8.4" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
