--- a/OnlineStore.Application/OnlineStore.Application.csproj
+++ b/OnlineStore.Application/OnlineStore.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\OnlineStore.Domain\OnlineStore.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
 </Project>
